UtahLiveDataTest/src/objects/FundingAccount__c.object
<CustomObject>
    <description>[Business] Funding account details Funding accounts are created from Funding sources</description>
    <fields>
        <fullName>ActualEncumbranceBalance__c</fullName>
        <label>Actual Encumbrance Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AgencyFundTitle__c</fullName>
        <label>Agency Fund Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyFund__c</fullName>
        <label>Agency Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllocatedAmount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountAlreadySpent__c</fullName>
        <description>Amount that has already been spent</description>
        <label>Amount Already Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppropriationBalance__c</fullName>
        <label>Appropriation Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppropriationBudgetedAmount__c</fullName>
        <label>Appropriation/Budgeted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppropriationFund__c</fullName>
        <label>Appropriation Fund</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppropriationNumber__c</fullName>
        <label>Appropriation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableAmount__c</fullName>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <label>BatchId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetedAmount__c</fullName>
        <label>Budgeted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CANNumber__c</fullName>
        <label>CAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <label>CFDA Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommittedToAward__c</fullName>
        <description>This calculates Committed Amount Sum from Award Funding Account</description>
        <label>Committed To  Award</label>
        <summarizedField>AwardFundingAccount__c.CommittedAmount__c</summarizedField>
        <summaryForeignKey>AwardFundingAccount__c.FundingAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommittedToFOA__c</fullName>
        <description>Calculated field from Funding Opportunity Funding Account</description>
        <label>Committed to FOA</label>
        <summarizedField>AnnouncementFundingAccount__c.CommittedAmount__c</summarizedField>
        <summaryForeignKey>AnnouncementFundingAccount__c.FundingAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CompObjectTitle__c</fullName>
        <label>Comp Object Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompObject__c</fullName>
        <label>Comp Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompSourceGrpTitle__c</fullName>
        <label>Comp Source Grp Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompSourceGrp__c</fullName>
        <label>Comp. Source Grp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplaySubmitForApprovalButton__c</fullName>
        <formula>NOT(AND(TEXT( Status__c) = &apos;In Progress&apos; , TEXT($User.UserType) = &apos;Standard&apos;))</formula>
        <label>Display Submit for Approval Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expenditures__c</fullName>
        <label>Expenditures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAIN__c</fullName>
        <label>FAIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_History_Entity_Name__c</fullName>
        <description>This field will show Entity Name in Field level history.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will show Entity Name in Field level history.</inlineHelpText>
        <label>Field History Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYearShort__c</fullName>
        <formula>FiscalYear__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Funding Accounts</relationshipLabel>
        <relationshipName>FundingAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingAccountId__c</fullName>
        <label>ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FundingSource__c</fullName>
        <label>Funding Source</label>
        <referenceTo>FundingSource__c</referenceTo>
        <relationshipLabel>Funding Accounts</relationshipLabel>
        <relationshipName>Funding_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FundsAvailable__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAAPCategoryTitle__c</fullName>
        <label>GAAP Category Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantTitle__c</fullName>
        <label>Grant Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantorTitle__c</fullName>
        <label>Grantor Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>FundingSource__r.HideEditDelete__c</formula>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideExternalTypeGrid__c</fullName>
        <formula>TEXT(FundingSource__r.Type__c)=&apos;Federal&apos;</formula>
        <label>HideExternalTypeGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideInternalGrid__c</fullName>
        <formula>TEXT(FundingSource__r.Type__c) =&apos;State&apos;</formula>
        <label>HideInternalGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndexTitle__c</fullName>
        <label>Index Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IntraDistrictBalance__c</fullName>
        <label>Intra District Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;FA-&apos;+  Right(TEXT(YEAR( FiscalYear__r.EndDate__c)),2) + &apos;-&apos;</formula>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonFederalFund__c</fullName>
        <formula>IF(AppropriationFund__c &lt;&gt; &apos;200&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonFederalFund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectClass__c</fullName>
        <label>Object Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectCode__c</fullName>
        <label>Object Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgCode__c</fullName>
        <label>Org Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgTitle__c</fullName>
        <label>Org Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCA__c</fullName>
        <label>PCA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <label>Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreEncumbranceBalance__c</fullName>
        <label>Pre Encumbrance Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramTitle__c</fullName>
        <label>Program Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingAmountToBePaid__c</fullName>
        <description>Calculates Difference from Total Encumbered Amount and Paid Amount</description>
        <formula>SumOfBudgetCategories__c  -  Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount to be Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <formula>FundingSource__r.TotalAllocatedAmount__c  -   FundingSource__r.SumofFundingAccountAllocated_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unencumbered Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SumOfBudgetCategories__c</fullName>
        <description>Sum of Funding Account Budget categories</description>
        <inlineHelpText>Sum of  Budget Categories</inlineHelpText>
        <label>Total Encumbered Amount</label>
        <summarizedField>FundingAccountBudgetCategory__c.Amount__c</summarizedField>
        <summaryForeignKey>FundingAccountBudgetCategory__c.FundingAccount__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalObligationAmount__c</fullName>
        <label>Total Obligation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalObligations__c</fullName>
        <label>Total Obligations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UncommittedtoAward__c</fullName>
        <description>Calculates difference Amount from Total encumbered to Committed To Award</description>
        <formula>SumOfBudgetCategories__c  -  CommittedToAward__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uncommitted to Award</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Funding Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Dont_allow_updating_of_Funding_Source</fullName>
        <active>true</active>
        <description>Used as a workaround. Dynamic layout was not showing up Funding Source lookup on Create. Hence made the field reparentable.</description>
        <errorConditionFormula>If(AND(NOT(ISNEW()),ISCHANGED(FundingSource__c)),true,false)</errorConditionFormula>
        <errorDisplayField>FundingSource__c</errorDisplayField>
        <errorMessage>You cannot change a Funding source for an existing Funding Account</errorMessage>
    </validationRules>
</CustomObject>